--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,8 @@
 cmake_minimum_required(VERSION 3.21)
 # 定义项目名称
 project(optimal_control_problem)
-
+# 查找ament_cmake包（ROS2基础构建系统）
+find_package(ament_cmake REQUIRED)
 ##################################################################################################
 #################################### 用户配置区开始 ##############################################
 ##################################################################################################
@@ -53,18 +54,12 @@ set(ALL_TARGETS
 ##################################################################################################
 #################################### 用户配置区结束 ##############################################
 ##################################################################################################
-
-# 查找ament_cmake包（ROS2基础构建系统）
-find_package(ament_cmake REQUIRED)
 ######################################## CasADi处理 ##########################################
 # 查找CasADi库文件
-find_library(CASADI_LIBRARY
-        NAMES casadi
-        HINTS ${CASADI_INCLUDE_DIR}/../lib $ENV{CASADI_PREFIX}/lib
-)
-if (CASADI_LIBRARY)
-    set(CASADI_LIBRARIES ${CASADI_LIBRARIES} ${CASADI_LIBRARY})
-endif ()
+find_package(PkgConfig QUIET)
+if(PKG_CONFIG_FOUND)
+    pkg_check_modules(CASADI casadi)
+endif()
 ##################################################################################################
 #################################### 用户配置区结束 ##############################################
 ##################################################################################################
