--- a/package.xml
+++ b/package.xml
@@ -9,6 +9,7 @@
     <buildtool_depend>ament_cmake</buildtool_depend>
     <depend>rclcpp</depend>
     <depend>ament_index_cpp</depend>
+    <depend>sqp_solver_utils</depend>
 
     <export>
         <build_type>ament_cmake</build_type>
