rearrange : 把变量相关的管理方法完全放到了OCPConfig类内

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ set(parent_packages
 set(TARGET1 "optimal_control_problem")
 set(${TARGET1}_TYPE "LIBRARY")
 aux_source_directory(src ${TARGET1}_SOURCES)
+aux_source_directory(src/OCP_config ${TARGET1}_SOURCES)
 
 # 将所有目标名称添加到列表中
 set(ALL_TARGETS
