fix ： 求解器的变量初始化bug修复

--- a/config/OCP_config.yaml
+++ b/config/OCP_config.yaml
@@ -34,6 +34,7 @@ OCP_variables:
 
 solver_settings:
   verbose: true
+  gen_code: false
   recompile: false
   load_lib: false
 #  求解器的方案有很多种： IPOPT, ADMM, CUDA_ADMM, SQPMETHOD, MIXED,对应不同的求解方式
