--- a/config/OCP_config.yaml
+++ b/config/OCP_config.yaml
@@ -35,6 +35,7 @@ OCP_variables:
 solver_settings:
   verbose: true
   gen_code: false
+#  如果是recompile则会在运行时重新生成.so文件
   recompile: false
   load_lib: false
 #  求解器的方案有很多种： IPOPT, ADMM, CUDA_ADMM, SQPMETHOD, MIXED,对应不同的求解方式
