adjust : 精简了API，让优化变量处在一个数据帧内进行管理，避免了区分“输入”和“状态” todo ： SQP化，将原问题转换成为一个增量形式的问题 bug : 第一帧的信息内不含有非0的F似乎和欧拉方向有关

--- a/config/OCP_config.yaml
+++ b/config/OCP_config.yaml
@@ -36,5 +36,5 @@ solver_settings:
 #  如果是recompile则会在运行时重新生成.so文件
   recompile: false
   load_lib: false
-#  求解器的方案有很多种： IPOPT, ADMM, CUDA_ADMM, SQPMETHOD, MIXED,对应不同的求解方式
+#  求解器的方案有很多种： IPOPT, SQP, CUDA_SQP, MIXED,对应不同的求解方式
   solve_method: MIXED
