--- a/config/OCP_config.yaml
+++ b/config/OCP_config.yaml
@@ -37,4 +37,4 @@ solver_settings:
   recompile: false
   load_lib: false
 #  求解器的方案有很多种： IPOPT, SQP, CUDA_SQP, MIXED,对应不同的求解方式
-  solve_method: MIXED
+  solve_method: CUDA_SQP
