feat：将stepnum和alpha写入OCP_config,并且更名为SQP_step&ADMM_step

--- a/config/OCP_config.yaml
+++ b/config/OCP_config.yaml
@@ -4,6 +4,8 @@ problem:
   dt: 0.05
   horizon:  20
   verbose: true
+  SQP_step: 10
+  ADMM_step: 0.5
 
 # 据说是使用.inf就可以在yaml内完成无穷大的设置
 OCP_variables:
