feat : 从YAML：：Node加载属性

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 ## 设置配置文件路径宏
 #add_definitions(-DCONFIG_FILE_PATH="${CMAKE_CURRENT_SOURCE_DIR}/config/config.yaml")
 ## 设置包路径宏
-add_definitions(-DPACKAGE_PATH="${CMAKE_CURRENT_SOURCE_DIR}")
+#add_definitions(-DPACKAGE_PATH="${CMAKE_CURRENT_SOURCE_DIR}")
 
 ######################################## 依赖项配置 ###########################################
 # 设置第三方库依赖
@@ -60,7 +60,7 @@ aux_source_directory(test ${TARGET2}_SOURCES)
 # 将所有目标名称添加到列表中
 set(ALL_TARGETS
         ${TARGET1}
-        ${TARGET2}
+#        ${TARGET2}
         # 在此添加更多目标
 )
 
