--- a/package.xml
+++ b/package.xml
@@ -10,6 +10,9 @@
     <depend>rclcpp</depend>
     <depend>ament_index_cpp</depend>
 
+    <test_depend>ament_lint_auto</test_depend>
+    <test_depend>ament_lint_common</test_depend>
+
     <export>
         <build_type>ament_cmake</build_type>
     </export>
